# financial-data-portal

./: .env.example  .gitignore  README.md  app.py  database.py  init_db.py  models.py  pdf_generator.py  prd.md  pyproject.toml  requirements.txt  test_app.py
.commandcode/plans/: tech-stack-migration.md
.commandcode/taste/: taste.md
.github/workflows/: ci.yml
src/: config.py  database.py  main.py  models.py  seed.py
src/routes/: api.py  pages.py
src/schemas/: client.py  report.py
src/services/: client_service.py  report_service.py
static/css/: style.css
static/js/: app.js  client_form.js  dashboard.js  report_form.js
templates/: base.html  client_form.html  dashboard.html  report_form.html  report_history.html
tests/: conftest.py  test_api.py
